[tool.poetry]
name = "covidwhereto"
version = "0.1.0"
description = ""
authors = ["Vasile Pop <vasile.pop@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.9.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
